# maper

./: README.md  container_image_analysis.py  container_images.json  create_dataset.py  parse_results.py  percentile.py  pyproject.toml  run_experiments.py  top150_images_dockerhub.json
datasets/: dataset1.json
logs_sensitivity_analysis_maper/: detailed_timestamp=1717945162;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=0.5;current_step=1.xlsx  detailed_timestamp=1717945164;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=0.6;current_step=1.xlsx  detailed_timestamp=1717945167;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=0.7;current_step=1.xlsx  detailed_timestamp=1717945169;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=0.8;current_step=1.xlsx  detailed_timestamp=1717945171;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=0.9;current_step=1.xlsx  detailed_timestamp=1717945173;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.5;prov_time_threshold=1.0;current_step=1.xlsx  detailed_timestamp=1717945175;dataset=dataset1;seed_value=1;algorithm=maper;time_steps=3600;delay_threshold=0.6;prov_time_threshold=0.5;current_step=1.xlsx  parsed_summarized_results_maper.csv  summarized_results_maper.csv  (+29 more)
logs_sensitivity_analysis_temp_et_al/: parsed_summarized_results_temp_et_al.csv  (+37 more)
(+9 files in other folders)
